# GlobalCouponFinder-Backend

./: .dockerignore  .env.example  .gitignore  .railway  .railwayignore  Dockerfile  Dockerfile.nixpacks  RAILWAY_ENV_VARS.txt  README.md  config.py  countries.py  database.py  docker-compose.yml  init_db.py  main.py  models.py  models_sqlite.py  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements-full.txt  requirements-minimal.txt  requirements.txt  seed_stores.py  simple_main.py  simple_server.py  start.sh  test_api.py  test_server.py  test_startup.py
routers/: coupons.py  stores.py
