[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "globalcouponfinder-backend"
version = "1.0.0"
description = "GlobalCouponFinder Backend API"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "redis==4.6.0",
    "beautifulsoup4==4.12.2",
    "requests==2.31.0",
    "fake-useragent==1.4.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "slowapi==0.1.9",
    "httpx==0.25.2",
    "gunicorn==21.2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
